# mrdirector

./: Cargo.toml  LICENSE.txt  README.md
src/: assess_current_line.rs  director_state.rs  evaluate_choice.rs  evaluate_command.rs  lib.rs  print_current_line.rs  text_overlay.rs
