[package]
name = "mrdirector"
version = "0.1.2"
edition = "2021"
authors = ["pklwrks LLC <jd@pklwrks.xyz>"]
description = "A narrative game development package for the Turbo Game Engine."
repository = "https://github.com/jdcalvelli/mrdirector"
license = "GPL-3.0-or-later"

[dependencies]
turbo = { package = "turbo-genesis-sdk", version = "1.6.2" }